Fixed editor overflow style and entity casting

--- a/editor/src/styles/components/_form.scss
+++ b/editor/src/styles/components/_form.scss
@@ -13,6 +13,7 @@
     width: 100%;
     border: $border-width-small solid $color-grey;
     padding: 10px;
+    color: $color-white;
 }
 
 .checkbox {
