--- a/editor/src/styles/main.scss
+++ b/editor/src/styles/main.scss
@@ -30,13 +30,15 @@ div[role="button"] {
 input {
     width: 100%;
     background-color: #424242;
+    color: white;
     outline: none;
     border: 1px solid #181818;
     padding: 3px 5px;
+    border-radius: 5px;
 }
 
 input:focus {
-    outline: 2px solid #007ACC;
+    border: 1px solid #007ACC;
 }
 
 .component {
@@ -65,23 +67,28 @@ html, body {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 12.5px;
+    height: 12.5px;
   }
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #000000;
+    background: #282828;
   }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: #585858;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #484848;
   }
+  
+  ::-webkit-scrollbar-corner {
+    background: #282828;
+    }
 
 .pane {
     background-color: #fefefe;
@@ -130,10 +137,6 @@ html, body {
 .active {
     background-color: #FFCD43;
     color: #282828 !important;
-}
-
-canvas {
-    image-rendering: crisp-edges;
 }
 
 button {
@@ -408,5 +411,14 @@ button.active {
         padding-top: 0;
         padding-left: 0;
         display: inherit;
+    }
+}
+
+canvas {
+    border-radius: 0;
+
+    &:focus {
+        outline: 3px solid lightskyblue;
+        -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
     }
 }
